--- a/assets/css/content.less
+++ b/assets/css/content.less
@@ -194,13 +194,14 @@ blockquote > *:last-child {
 h2.chapo {
 	padding-bottom: 10px;
 }
-.link:before {
+.link-important:before {
 	content:'\203A';
 	color: #38302b;
 	display: inline-block;
 	margin-right: 4px;
+	font-style: normal;
 }
-.link a {
+.link-important a {
 	font-style: italic;
 }
 /* BUTTONS */
