--- a/modules/front-page/front/css/front-page.less
+++ b/modules/front-page/front/css/front-page.less
@@ -90,7 +90,7 @@
 	color: #FFFFFF;
 	font-style: italic;
 }
-#slider .post-entry .link:before {
+#slider .post-entry .link-important:before {
 	color: #FFFFFF;
 }
 #slider .post-entry a:hover {
