--- a/modules/event/front/css/event.less
+++ b/modules/event/front/css/event.less
@@ -44,7 +44,9 @@ body {
  *
  ********************/
 .em-booking-form-details {
-
+	padding: 0;
+	width: auto;
+	float: none;
 }
 
 #extra-booking-navigation {
