--- a/modules/page-builder/front/css/page-builder.less
+++ b/modules/page-builder/front/css/page-builder.less
@@ -40,3 +40,33 @@
 	display: block;
 	margin: 0 auto;
 }
+
+.extra-slider .responsiveImagePlaceholder {
+	display: block;
+}
+.extra-slider .responsiveImagePlaceholder img {
+	display: block;
+	margin: 0 auto;
+}
+
+.extra-slider .pagination {
+	z-index: 11;
+	bottom: -25px;
+}
+.extra-slider {
+	overflow: visible;
+}
+.extra-slider:after {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 1px;
+	background-color: #aac2c8;
+	position: absolute;
+	left: 0;
+	bottom: -20px;
+}
+.extra-slider-auto-indicator {
+	z-index: 1;
+	bottom: -20px;
+}
