--- a/modules/login-and-password/front/css/login.less
+++ b/modules/login-and-password/front/css/login.less
@@ -24,7 +24,7 @@ html body.login #login h1 {
 	margin: 30px 0 0;
 }
 html body.login #login > h1 > a {
-	background-image: url(@{themeurl}/assets/img/visu/logo.png);
+	background-image: url(@{themeurl}/assets/img/visu/logo-admin.png);
 	background-size: auto auto;
 	background-position:center center;
 	background-color: #fff;
